--- a/movies.html
+++ b/movies.html
@@ -15,52 +15,74 @@
 
     <div class="flex flex-col m-auto text-white">
 
-        <header class="flex justify-center sm:justify-evenly md:justify-between md:px-20 h-[100px] bg-gray-950">
-
+        <header class="flex justify-center sm:justify-evenly md:justify-between md:px-20 h-[80px] bg-gray-950">
 
             <div class="w-20 h-20">
-                <img src="./assets/images/Moviestack_isotipo.png" alt="" class="w-20 h-20">
+                <a href="index.html"><img src="./assets/images/Moviestack_isotipo.png" alt="" class="w-20 h-20"></a>
             </div>
 
 
-            <div class="flex items-center">
-                <nav class="">
+            
+                <nav class="flex items-center">
                     <ul class="flex">
                         <li class="">
                             <a href="index.html" class="p-3 text-lg">HOME</a>
                         </li>
                         <li class="">
-                            <a href="#" class="border-2 border-zinc-50 text-purple-500 p-3 text-lg">MOVIES</a>
+                            <a href="#"
+                                class="border-2 rounded-md border-purple-900 text-purple-500 p-3 text-lg">MOVIES</a>
                         </li>
                         <li class="">
-                            <a href="#" class="p-3 text-lg">FAVS</a>
+                            <a href="favs.html" class="p-3 text-lg">FAVS</a>
                         </li>
                     </ul>
                 </nav>
-            </div>
+            
 
 
         </header>
-        <main class="flex flex-col lg:flex-col grow bg-gray-900 h-5/6">
+        <main class="flex flex-col lg:flex-col grow h-5/6">
 
-            <section class="text-center text-xl h-2/5 md:1/2  p-10 text-purple-500">
-                <h2 class=""><strong>¡De Película en Película!</strong></h2>
-                <p>Sumérgete en un festival de emociones con nuestro catálogo cinematográfico.</p>
+            <section class="text-center h-2/5 md:1/2 pt-5">
+                <h2 class="text-3xl lg:text-4xl py-2 font-bold text-purple-600">¡From Movie to Movie!</h2>
+                <p class="text-white text-xl lg:text-2xl">Do you have a specific movie in mind? Don't worry, use our search and make your choice a reality</p>
             </section>
 
-            <div id="cards" class ="flex flex-wrap justify-center gap-5">
+            <div class="text-center text-xl m-5">
+                <label>Search for your favorite movie:
+                    <input type="text" name="search" id="inputSearchMovies" placeholder="ej: Saw" class="border rounded-md bg-white">
+                </label>
+                <select name="gen" id="genero" class="border rounded-md bg-white">
+                    <option value="All" selected>ALL</option>
+                    <option value="Horror">Horror</option>
+                    <option value="Mystery">Mystery</option>
+                    <option value="Thriller">Thriller</option>
+                    <option value="Action">Action</option>
+                    <option value="Drama">Drama</option>
+                    <option value="Adventure">Adventure</option>
+                    <option value="Crime">Crime</option>
+                    <option value="Fantasy">Fantasy</option>
+                    <option value="Comedy">Comedy</option>
+                    <option value="Animation">Animation</option>
+                    <option value="Family">Family</option>
+                    <option value="Romance">Romance</option>
+                    <option value="Science Fiction">Science Fiction</option>
+                    <option value="History">History</option>
+                </select>
+            </div>
 
+            <div id="containerCards" class="flex flex-wrap justify-center gap-5">
 
 
 
             </div>
         </main>
 
-        <footer class="bg-gray-950 h-[100px]">
+<!--       <footer class="bg-gray-950 h-[100px]">
 
             <h3 class="text-center text-xl pt-5">MindHub - Cohort N°53</h3>
 
-        </footer>
+        </footer> -->
 
     </div>
 
