--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
             </div>
 
 
-            
-                <nav class="flex items-center">
-                    <ul class="flex">
-                        <li class="">
-                            <a href="#" class="border-2 rounded-md border-purple-900 text-purple-500 p-3 text-lg">HOME</a>
-                        </li>
-                        <li class="">
-                            <a href="movies.html" class="p-3 text-lg">MOVIES</a>
-                        </li>
-                        <li class="">
-                            <a href="favs.html" class="p-3 text-lg">FAVS</a>
-                        </li>
-                    </ul>
-                </nav>
-            
+
+            <nav class="flex items-center">
+                <ul class="flex">
+                    <li class="">
+                        <a href="#" class="border-2 rounded-md border-purple-900 text-purple-500 p-3 text-lg">HOME</a>
+                    </li>
+                    <li class="">
+                        <a href="movies.html" class="p-3 text-lg">MOVIES</a>
+                    </li>
+                    <li class="">
+                        <a href="favoritos.html" class="p-3 text-lg">FAVS</a>
+                    </li>
+                </ul>
+            </nav>
+
 
 
         </header>
@@ -47,14 +47,21 @@
                 <div class="flex flex-col gap-5 relative bottom-[80%]">
                     <section>
                         <h1 class="text-center text-5xl font-bold lg:text-6xl xl:text-7xl ">MovieStack</h1>
-                        <h3 class="text-lg md:text-xl lg:text-2xl ">¿Are you ready to dive in? Explore our diverse catalog</h3>
+                        <h3 class="text-lg md:text-xl lg:text-2xl ">¿Are you ready to dive in? Explore our diverse
+                            catalog</h3>
                     </section>
-                        <a class="flex items-center justify-center m-auto relative top-9 w-52 h-16 border rounded-md shadow-2xl bg-purple-900 opacity-85 hover:opacity-100 hover:bg-purple-800 transition duration-300 font-semibold text-xl" href="./movies.html">Start now</a>
+                    <div class="flex flex-col sm:flex-row gap-5 md:gap-10 items-center justify-center m-auto relative top-9">
+                        <a class="flex items-center justify-center w-52 h-16 border rounded-md shadow-2xl bg-purple-900 opacity-85 hover:opacity-100 hover:bg-purple-800 transition duration-300 font-semibold text-xl"
+                            href="./movies.html">Start Now</a>
+                        <a class="flex items-center justify-center w-52 h-16 border rounded-md shadow-2xl bg-blue-900 opacity-85 hover:opacity-100 hover:bg-blue-800 transition duration-300 font-semibold text-xl"
+                            href="./favoritos.html">Your Favs</a>
+                    </div>
                 </div>
             </div>
             <section class="text-center h-2/5 md:1/2 bg-gray-900">
-                <h2 class="text-2xl py-2 font-bold text-purple-200">¡From Movie to Movie!</h2>
-                <p class="text-lg md:text-xl lg:text-2xl">Explore our website to discover a diverse collection of movies, personalized recommendations, and more.</p>
+                <h2 class="text-2xl py-2 font-bold text-purple-600">¡From Movie to Movie!</h2>
+                <p class="text-lg md:text-xl lg:text-2xl">Explore our website to discover a diverse collection of
+                    movies, personalized recommendations, and more.</p>
             </section>
         </main>
 
@@ -67,7 +74,7 @@
     </div>
 
 
-    <script src="data.js"></script>
+
     <script src="index.js"></script>
 </body>
 
